60% backend, fix Mapper inject

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,8 @@ spring.devtools.livereload.enabled=true
 spring.jackson.default-property-inclusion=non_null
 
 spring.data.mongodb.replica-set-name=myReplicaSet
+
+
+spring.security.user.name=hukhan
+spring.security.user.password=123
+
