handle circular references, create CloudinaryService (upload img)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.data.mongodb.replica-set-name=myReplicaSet
 spring.security.user.name=hukhan
 spring.security.user.password=123
 
+cloudinary.cloud-name=dnsvndg9g
+cloudinary.api-key=845847516656953
+cloudinary.api-secret=lHl_xkV1qD4eQqngEW1QI0Pj3q0
