--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,6 @@ dependencies {
     implementation group: 'org.mapstruct', name: 'mapstruct', version: '1.5.5.Final'
     implementation group: 'org.mapstruct', name: 'mapstruct-processor', version: '1.5.5.Final'
 
-
     developmentOnly("org.springframework.boot:spring-boot-devtools")
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '3.4.0'
 
@@ -45,6 +44,8 @@ dependencies {
     implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.12.6'
     runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.12.6'
     runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.12.6'
+
+    implementation group: 'com.cloudinary', name: 'cloudinary-http44', version: '1.39.0'
 
 
 }
