--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,12 @@ spring.security.user.password=123
 cloudinary.cloud-name=dnsvndg9g
 cloudinary.api-key=845847516656953
 cloudinary.api-secret=lHl_xkV1qD4eQqngEW1QI0Pj3q0
+
+
+# T?ng gi?i h?n upload file lên 200MB
+spring.servlet.multipart.max-file-size=200MB
+spring.servlet.multipart.max-request-size=200MB
+
+spring.jackson.date-format=yyyy-MM-dd'T'HH:mm:ss.SSS
+spring.jackson.time-zone=Asia/Ho_Chi_Minh
+
