before changing commissionRate

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,9 +18,23 @@ cloudinary.api-secret=lHl_xkV1qD4eQqngEW1QI0Pj3q0
 
 
 # T?ng gi?i h?n upload file lên 200MB
+spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=200MB
 spring.servlet.multipart.max-request-size=200MB
 
 spring.jackson.date-format=yyyy-MM-dd'T'HH:mm:ss.SSS
 spring.jackson.time-zone=Asia/Ho_Chi_Minh
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=daohuukhang0607@gmail.com
+spring.mail.password=tfdz jszh rmik uxjo
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+spring.data.redis.host=redis-16343.c252.ap-southeast-1-1.ec2.redns.redis-cloud.com:16343
+spring.data.redis.port=16343
+spring.data.redis.password=5SAivBuQnp4ymZiDb67uuqtPOQWyuIJJ
+spring.data.redis.ssl.enabled=true
 
