--- a/build.gradle
+++ b/build.gradle
@@ -46,7 +46,8 @@ dependencies {
 
     implementation group: 'com.cloudinary', name: 'cloudinary-http44', version: '1.39.0'
 
-
+    implementation("org.springframework.boot:spring-boot-starter-mail:3.4.4")
+    implementation("org.springframework.boot:spring-boot-starter-data-redis:3.4.2")
 }
 
 tasks.named('test') {
